# practice_bsu

./: .gitignore
lab1/: CMakeLists.txt  отчет_1_лабы.docx
lab1/src/: Fraction.cpp  Fraction.h  laba10.h  laba7.h  mainwindow.cpp  mainwindow.h
lab1/tests/: test_lab1.cpp  test_lab2.cpp  test_lab3.cpp
lab2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  warehousemodel.cpp  warehousemodel.h  Отчет_2_лабы.docx
lab2/WarehouseApp/: README.md  WarehouseApp.pro  itemdialog.cpp  itemdialog.h  mainwindow.cpp
lab2/WarehouseApp/tests/: CMakeLists.txt  tests.pro  tst_warehousemodel.cpp
lab2/tests/: tst_warehousemodel.h
lab3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  productcard.cpp  productcard.h  productcardstore.cpp  productcardstore.h  отчет_3_лабы.docx
lab3/ProductCardApp/: ProductCardApp.pro  README.md  mainwindow.cpp  productcard.h
lab3/ProductCardApp/sample_data/: products.txt
lab3/ProductCardApp/tests/: tests.pro  tst_productcardstore.h
lab3/tests/: CMakeLists.txt  tst_productcardstore.cpp  tst_productcardstore.h
lab4/: CMakeLists.txt  README.md  VectorEditor.pro  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h  scene.cpp  scene.h  shape.cpp  shape.h  shapes.cpp  shapes.h  Отчет_4_лабы.docx
lab4/tests/: CMakeLists.txt  tests.pro  tst_scene.cpp  tst_scene.h
lab5/: CMakeLists.txt  Отчет_5_лабы.docx
lab5/src/: Ball.h  Brick.h  GameEngine.cpp  GameEngine.h  GameObject.h  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  Paddle.h  PowerUp.h  Vector2D.h  main.cpp
lab5/tests/: CMakeLists.txt  test_gameengine.cpp
